# libavdev

./: .gitignore  Makefile.am  acap-linux.c  acap-win32.c  acap.h  adev-linux.c  adev-win32.c  adev.c  adev.h  build.sh  clean.sh  configure.ac  display.c  display.h  idev.c  idev.h  libavdev.pc.in  test.c  texture.c  texture.h  utils.h  vdev-d3d.c  vdev-linux.c  vdev-win32.c  vdev.c  vdev.h
